--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@walletconnect/web3-provider": "^1.7.1",
-    "antd": "^4.18.8",
     "axios": "^0.26.0",
     "ethers": "^5.5.4",
+    "framer-motion": "^6",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
     "moment": "^2.29.1",
@@ -55,10 +58,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
     "lint-staged": "^12.3.4",
-    "next-with-less": "^2.0.5",
     "prettier": "^2.0.2",
     "sass": "^1.49.9",
     "typescript": "^4.5.5"
