--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -38,6 +37,7 @@
     "next": "12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
