--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@walletconnect/web3-provider": "^1.7.1",
+    "animate.css": "^4.1.1",
     "axios": "^0.26.0",
     "ethers": "^5.5.4",
     "framer-motion": "^6",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@svgr/webpack": "^6.2.1",
     "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
