--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-select": "^5.2.2",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "web3modal": "^1.9.5"
