--- a/helm/lucis-nft-web/templates/mapping.yaml
+++ b/helm/lucis-nft-web/templates/mapping.yaml
@@ -1,10 +1,9 @@
 apiVersion: getambassador.io/v2
 kind: Mapping
 metadata:
-  name: {{ include "lucis-nft-web.fullname" . }}
-  labels:
-    {{- include "lucis-nft-web.labels" . | nindent 4 }}
+  name: { { include "lucis-nft-web.fullname" . } }
+  labels: { { - include "lucis-nft-web.labels" . | nindent 4 } }
 spec:
-  prefix: {{ .Values.mapping.prefix }}
-  host: {{ .Values.mapping.host }}
-  service:  {{ include "lucis-nft-web.fullname" . }}
+  prefix: { { .Values.mapping.prefix } }
+  host: { { .Values.mapping.host } }
+  service: { { include "lucis-nft-web.fullname" . } }
