--- a/package.json
+++ b/package.json
@@ -32,16 +32,23 @@
     "axios": "^0.26.0",
     "ethers": "^5.5.4",
     "framer-motion": "^6",
+    "gray-matter": "^4.0.3",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
     "moment": "^2.29.1",
     "next": "12.1.0",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
     "react-feather": "^2.0.9",
+    "react-markdown": "^8.0.1",
     "react-select": "^5.2.2",
     "react-slick": "^0.28.1",
+    "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.1",
+    "remark-prism": "^1.3.6",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.4",
     "web3modal": "^1.9.5"
