--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ethers": "^5.5.4",
     "framer-motion": "^6",
     "gray-matter": "^4.0.3",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
     "moment": "^2.29.1",
