feat: nft && collection service

--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,14 @@
 #
 # Public to browser with NEXT_PUBLIC_ prefix
 #
-NEXT_PUBLIC_API_URL='http://localhost:3300'
-
+NODE_ENV=development
+NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_TEST_API_URL=
 # Metamask will switch to this required network
-NEXT_PUBLIC_REQUIRED_CHAIN_ID=1
-
+NEXT_PUBLIC_REQUIRED_CHAINID=
 # TODO: key rotation in case of so many request
-NEXT_PUBLIC_FT_CONTRACT_ADDR=
-
+NEXT_PUBLIC_LUCIS_CONTRACT_ADDRESS=
+NEXT_PUBLIC_DEFAULT_TOKEN_ADDRESS=
 #
 # Server only without NEXT_PUBLIC_ prefix
 #
