ref: replace momentjs by dayjs

--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@walletconnect/web3-provider": "^1.7.1",
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
+    "dayjs": "^1.11.0",
     "ethers": "^5.5.4",
     "framer-motion": "^6",
     "gray-matter": "^4.0.3",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
-    "moment": "^2.29.1",
     "next": "12.1.0",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
